--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+:root{
+    --light-grey: rgba(33, 33, 33);
+    --dark-grey: rgba(22, 22, 22);
+}
+
 body{
     font-family: 'Roboto', 'Arial', sans-serif;
     display: grid;
