create center-align class

--- a/style.css
+++ b/style.css
@@ -6,4 +6,9 @@
 body{
     font-family: 'Roboto', 'Arial', sans-serif;
     display: grid;
+.center-align{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 }
