--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
 body{
     font-family: 'Roboto', 'Arial', sans-serif;
     display: grid;
+    padding: 0;
+    margin: 0;
+}
+
 .center-align{
     display: flex;
     align-items: center;
