--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 body{
     font-family: 'Roboto', 'Arial', sans-serif;
     display: grid;
+    grid-template-rows: 100px 1fr 100px;
     padding: 0;
     margin: 0;
 }
