--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
     grid-template-rows: 100px 1fr 100px;
     padding: 0;
     margin: 0;
+    color: white;
 }
 
 .center-align{
@@ -18,9 +19,20 @@ body{
     flex-direction: column;
 }
 
+.header{
+    background-color: var(--light-grey);
+}
+
 .content{
     height: calc(100vh - 200px);
+    background-color: var(--dark-grey);
 }
+}
+
+.footer{
+    background-color: var(--light-grey);
+}
+
 ul{
     list-style-type: none;
 }
