--- a/style.css
+++ b/style.css
@@ -33,6 +33,9 @@ body{
     width: 200px;
     height: auto;
     padding: 8px;
+    margin-right: 1rem;
+    display: inline-block;
+    text-align: center;
 }
 
 .book h4{
