--- a/style.css
+++ b/style.css
@@ -33,6 +33,13 @@ body{
     background-color: var(--dark-grey);
 }
 
+.book-list{
+    padding: 0;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
 .add{
     display: inline-block;
 }
@@ -50,7 +57,6 @@ body{
     width: 200px;
     height: auto;
     padding: 8px;
-    margin-right: 1rem;
     display: inline-block;
     text-align: center;
 }
