--- a/style.css
+++ b/style.css
@@ -74,6 +74,22 @@ body{
     background-color: var(--light-grey);
 }
 
+.book-modal{
+    position: absolute;
+    top: 25%;
+    width: 500px;
+    padding-left: 8px;
+}
+
+.book-modal input{
+    width: 100%;
+    height: 2rem;
+    font-size: 1rem;
+    border-radius: 1rem;
+    border: lightgray 2px solid;
+    padding: 4px 0px 4px 4px;
+}
+
 ul{
     list-style-type: none;
 }
