--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root{
-    --light-grey: rgba(33, 33, 33);
-    --dark-grey: rgba(22, 22, 22);
+    --light-grey: rgb(33, 33, 33);
+    --dark-grey: rgb(22, 22, 22);
 }
 
 body{
@@ -58,7 +58,8 @@ body{
 }
 
 .book{
-    border: red 1px solid;
+    background: linear-gradient(to right, blueviolet 10px, #212121 0);
+    border-radius: 16px;
     width: 200px;
     height: auto;
     padding: 8px;
